<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/titleProfileTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="40dp"
        android:text="@string/titleProfile"
        />


    <TextView
        android:id="@+id/usernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/usernameProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/titleProfileTv"
        android:layout_marginTop="40dp"

        />

    <TextView
        android:id="@+id/loggedUsernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/usernameProfile"
        android:layout_marginTop="40dp"

        />


    <Button
        android:id="@+id/btnLogoutProfile"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="19dp"
        android:layout_marginBottom="40dp"
        android:text="@string/profilLogoutBtn"
        android:textAllCaps="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>